<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="titre">Smart Commerce</string>
    <string name="todo">TODO</string>
    <string name="copyright2">Copyright © 2018 Fredhel KISSIE </string>
    <string name="splash_com">Gérer votre commerce de manière efficace</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="banner">banner</string>
    <string name="name">Entrer le nom</string>
    <string name="nomHint">Nom</string>
    <string name="banner_one">Enregistrez toutes vos dépenses.</string>
    <string name="banner_two"> Votre nbAchetes en temps réel.</string>
    <string name="banner_three"> Calculez votre bénéfice sur n\'importe qu\'elle période.</string>
    <string name="pass_label">MOT DE PASSE</string>
    <string name="u_name_label">NOM D\'UTILISATEUR</string>
    <string name="login_btn_label">valider</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">USERNAME</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_history">historique</string>
    <string name="title_activity_journal">JournalActivity</string>
    <string name="tab_text_1">MONNAIES</string>
    <string name="tab_text_2">Ventes</string>
    <string name="tab_text_3">EMPRUNTS</string>
    <string name="tab_text_4">DIVERS</string>
    <string name="section_format"> Hello From this section !</string>
    <string name="journal_heading"> Journal</string>
    <string name="journal">Journal</string>
    <string name="b_n_fices">Bénéfices</string>
    <string name="nbAchetes">Stock</string>
    <string name="price">50 FCFA</string>
    <string name="dialog_annuler">Annuler</string>
    <string name="dialog_modifier">Modifier</string>
    <string name="dialog_money_test_name">Fred</string>
    <string name="dialog_money_test_chbre">H-46</string>
    <string name="dialog_money_test_som">500 F</string>
    <string name="money_dialog_name_title">Nom :</string>
    <string name="money_dialog_chbre_title">Chambre :</string>
    <string name="money_dialog_som_title">Somme :</string>
    <string name="selection">0 sélectionné</string>
    <string name="dialog_btn_valid">Valider</string>
    <string name="save">Enregistrer</string>
    <string name="creer_un_pack">CREER UN PACK</string>
    <string name="ajouter_un_capital">AJOUTER UN CAPITAL</string>
    <string name="settings_drawer_title">PARAMETRES</string>
    <string name="drawer_informations">Informations</string>
    <string name="about">A PROPOS</string>
    <string name="important_initialisation">
        Les articles nouvellement crées doivent être
        initialisés dans le stock. \nVous devez indiquer les prix unitaires de vente de chaque
        produit nouvellement créé.
    </string>
    <string name="premium">
        Veuillez acheter la version premium pour pouvoir bénéficier de cette fonctionnalité
    </string>
    <string name="notice">
        L\'article que vous tentez de vendre n\'a pas de prix unitaire.\n
        Veuillez l\'indiquer dans le stock.
    </string>
    <string name="exit">QUITTER</string>
    <string name="title_activity_stock">StockActivity</string>
    <string name="action_historique_appro">Historique</string>
    <string name="about_text" tools:ignore="Typos">
            \"Smart Commerce\" est une application de
            gestion des activités de votre commerce.\n\n

            Grâce à cette application vous pouvez :\n\n

            • Enregistrer vos dépenses approvisionnelles \n
            • Calculer votre bénéfice \n
            • Calculer vos pertes \n
            • Gérer les stocks \n
            • Enregistrer les ventes \n
            • Enregistrer les restes des différences de vos clients
    </string>
    <string name="logo_desc">logo</string>
    <string name="author_infos">
        version : 1.0 \n
        Copyright © 2019 Fredhel KISSIE \n
        email : fredkiss3@gmail.com
    </string>
    <string name="basket_som_lbl">Somme totale :</string>
    <string name="basket_total_som">0 F</string>
    <string name="basket_dep_lbl">dépenses sup :</string>
    <string name="basket_som_dep_sup">500</string>
    <string name="basket_list_lbl">Liste d\'achats</string>
    <string name="basket_title">Panier d\'Achats n° 1</string>
    <string name="basket_date" tools:ignore="TypographyDashes">15 - 02 - 2018</string>
    <string name="basket_item_global_price">500 F</string>
    <string name="basket_item_total_bought">x 10</string>
    <string name="basket_item_name">Pain</string>
    <string name="default_number">0</string>
    <string name="som_hint">somme</string>
    <string name="ajouter_un_produit">ajouter un achat</string>
    <string name="liste_des_articles">Liste des articles</string>
    <string name="cr_er_un_article">créer un article</string>
    <string name="nom">Nom</string>
    <string name="prix_unitaire">Prix unitaire d\'achat </string>
    <string name="reduction_unit">Réduction ( somme ) </string>
    <string name="reduction_global">Reduction du prix total d\'achat </string>
    <string name="prix_achat">Prix d\'achat </string>
    <string name="prix">Prix</string>
    <string name="_0">0</string>
    <string name="nombre_achet_s">Nombre achetés</string>
    <string name="nombre">nombre</string>
    <string name="prix_total_de_l_achat">Prix total de l\'achat</string>
    <string name="basket_filling_card_title">Créer un article</string>
    <string name="placeholder_sold_text">Aucune vente enregistrée pour aujourd\'hui</string>
    <string name="stock_left">Stock restant :</string>
    <string name="stock_left_placeholder">10</string>
    <string name="stock_article_unit_price">prix de vente :</string>
    <string name="stock_article_unit_price_placeholder">150 F</string>
    <string name="stock_article_reference">référence :</string>
    <string name="stock_article_reference_placeholder">mkA74</string>
    <string name="stock_placeholder">Aucun élément en stock</string>
    <string name="stock_article_type">type :</string>
    <string name="stock_article_type_placeholder">Article simple</string>
    <string name="app_name">Smart Commerce</string>
    <string name="basket_article_filling_card_title_create">Créer un article</string>
    <string name="basket_article_filling_card_title_edit">Modifier l\'article</string>
    <string name="basket_article_filling_card_title_add">Ajout d\'un article</string>
    <string name="stock_manage_title">Modification de l\'élément</string>
    <string name="prix_unitaire_vente">Prix unitaire</string>
    <string name="diff_placeholder">Aucune différence enregistrée</string>
    <string name="item_name">PAIN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Paramètres</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>