<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_combo"
            android:icon="@drawable/ic_create_new_folder_black_24dp"
            android:title="@string/creer_un_pack"
            />

        <!--<item-->
            <!--android:id="@+id/nav_capital"-->
            <!--android:icon="@drawable/ic_attach_money_black_24dp"-->
            <!--android:title="@string/ajouter_un_capital"-->
            <!--/>-->

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings_drawer_title"
            />
    </group>

    <item android:title="@string/drawer_informations">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_quit"
                android:icon="@drawable/ic_clear_black_24dp"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
