<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stock_manage_title"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/stock_manage_title"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/nomHint"
                android:layout_gravity="start|center_vertical"
                android:padding="10dp"
                tools:ignore="NestedWeights" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="13sp"
                android:gravity="end"
                android:inputType="textPersonName"
                android:hint="@string/nom"
                android:layout_gravity="end|center_vertical"
                android:padding="10dp"
                android:id="@+id/stock_manage_ch_name"
                />



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/prix_unitaire_vente"
                android:layout_gravity="start|center_vertical"
                android:padding="10dp"
                tools:ignore="NestedWeights" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="13sp"
                android:hint="@string/prix"
                android:inputType="number"
                android:text="@string/_0"
                android:layout_gravity="end|center_vertical"
                android:gravity="end"
                android:padding="10dp"
                android:id="@+id/stock_manage_ch_unit_price"
                />



        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/stock_manage_dialog_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/dialog_annuler"
            android:textColor="@color/dialog_btn_color" />

        <Button
            android:id="@+id/stock_manage_dialog_valid"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/dialog_btn_valid"
            android:textColor="@color/dialog_btn_color" />
    </LinearLayout>


</LinearLayout>