<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/basket_filling_card_title"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/basket_filling_card_title"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/nomHint"
                android:layout_gravity="start|center_vertical"
                android:padding="10dp"
                tools:ignore="NestedWeights" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="13sp"
                android:gravity="end"
                android:inputType="textPersonName"
                android:hint="@string/nom"
                android:layout_gravity="end|center_vertical"
                android:padding="10dp"
                android:id="@+id/basket_ch_filling_name"
                />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/nombre_achet_s"
                android:layout_gravity="start|center_vertical"
                android:padding="10dp"
                tools:ignore="NestedWeights" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="13sp"
                android:hint="@string/nombre"
                android:inputType="number"
                android:text="@string/_0"
                android:layout_gravity="end|center_vertical"
                android:gravity="end"
                android:padding="10dp"
                android:id="@+id/basket_ch_filling_nb_boughts"
                />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/prix_unitaire"
                android:layout_gravity="start|center_vertical"
                android:padding="10dp"
                tools:ignore="NestedWeights" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="13sp"
                android:hint="@string/prix"
                android:inputType="number"
                android:text="@string/_0"
                android:layout_gravity="end|center_vertical"
                android:gravity="end"
                android:padding="10dp"
                android:id="@+id/basket_ch_filling_unit_price"
                />



        </LinearLayout>

        <!-- TODO : AJOUTER LA REDUCTION -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/reduction_unit"
                android:layout_gravity="start|center_vertical"
                android:padding="10dp"
                tools:ignore="NestedWeights" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="13sp"
                android:hint="@string/prix"
                android:inputType="number"
                android:text="@string/_0"
                android:layout_gravity="end|center_vertical"
                android:gravity="end"
                android:padding="10dp"
                android:id="@+id/basket_ch_filling_reduction"
                />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/prix_total_de_l_achat"
                android:layout_gravity="start|center_vertical"
                android:padding="10dp"
                tools:ignore="NestedWeights" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:enabled="false"
                android:textSize="13sp"
                android:hint="@string/prix"
                android:inputType="number"
                android:text="@string/_0"
                android:layout_gravity="end|center_vertical"
                android:gravity="end"
                android:padding="10dp"
                android:id="@+id/basket_ch_filling_global_price"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp">

        <Button
            android:id="@+id/basket_btn_filling_dialog_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/dialog_annuler"
            android:background="@color/transparent"
            android:textColor="@color/dialog_btn_color"/>

        <Button
            android:id="@+id/basket_btn_filling_dialog_valid"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/dialog_btn_valid"
            android:textColor="@color/dialog_btn_color"
            android:background="@color/transparent"/>
    </LinearLayout>

</LinearLayout>