<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bgcolor"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/login_banner"
            android:layout_marginTop="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banner_three"
            android:textColor="?attr/textcolor"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingTop="40dp">

        <EditText
            android:id="@+id/login_username"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_person_outline_black_24dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="?attr/textcolor"
            android:hint="@string/u_name_label"
            android:textColorHint="?attr/subtextcolor"
            android:inputType="textPersonName"
            android:drawableLeft="@drawable/ic_person_outline_black_24dp" />
        <EditText
            android:id="@+id/login_password"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:layout_width="250dp"
            android:textColor="?attr/textcolor"
            android:textColorHint="?attr/subtextcolor"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/pass_label"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp" />
        <Button
            android:id="@+id/login_valid_btn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_selector"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/login_btn_label"
            android:textColor="?attr/lighttextcolor"
            />

    </LinearLayout>

</LinearLayout>